[package]
name = "aishell"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.0"
eyre = "0.6.12"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["net", "process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
